- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.12.1, 5.14.1
- 
        
- 
        025f938c1b4676782674d54375e1e4e560e4b6cd (qt/qtquickcontrols2/5.14)
Way to reproduce (with touch panel/screen):
- Put an AbstractButton object into the ListView which has the pressDelay property set to the value more than 0
- Press the button using the dedicated touch panel/touch screen
- Wait for the 'Pressed' event to be delivered (the button will change its visual state)
- Release the touch panel
As a result, the button remains in pressed state until the user clicked it one more time.
- duplicates
- 
                    QTBUG-70122 Flickable.pressDelay causes buttons to not click -         
- Closed
 
-         
- relates to
- 
                    QTBUG-104009 Issues with Slider in ListView with pressDelay set with touch screen -         
- Closed
 
-         
- 
                    QTBUG-53929 Button press in ListView is canceled after moving a tiny bit -         
- Closed
 
-         
- resulted from
- 
                    QTBUG-78818 MultiPointTouchArea is not reliably responsive inside a flickable ListView with pressDelay -         
- Closed
 
-         
- 
                    QTBUG-75750 Wacom tablet pen fails to work with Qt Virtual Keyboard and with MultiPointTouchArea -         
- Closed
 
-         
- resulted in
- 
                    QTBUG-102036 Release and Clicked not fired for Buttons in ListView with pressDelay set with touch screen -         
- Closed
 
-